testing/Travis/testcases/prototype/shouldSucceed/try41a.adl
CONTEXT Try41a IN ENGLISH


PATTERN Try41a

RELATION r[A*B]

RULE Try41a: r/r

ENDPATTERN

ENDCONTEXT
