testing/Travis/testcases/prototype/shouldFail/Ticket726.adl
CONTEXT Test
   RELATION r [A*B]
   REPRESENT B TYPE INTEGER
   RULE r;"Aap"
ENDCONTEXT
